--- a/styles/layout.css
+++ b/styles/layout.css
@@ -20,6 +20,4 @@
 .app-content {
   display: grid;
   grid-template-columns: 300px 1fr 400px;
-
-  height: 100%;
 }
